unpackaged/main/default/objects/Print_Run__c/Print_Run__c.object-meta.xml
<CustomObject>
    <label>Print Run</label>
    <nameField>
        <displayFormat>PR-{000000}</displayFormat>
        <label>Print Run ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Print Runs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>