unpackaged/main/default/objects/Print_Run__c/fields/No_of_Members__c.field-meta.xml
<CustomField>
    <fullName>No_of_Members__c</fullName>
    <label>No. of Members</label>
    <summaryForeignKey>Print_Run_Member__c.Print_Run__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>