unpackaged/main/default/objects/Print_Run__c/fields/Print_Run_Date__c.field-meta.xml
<CustomField>
    <fullName>Print_Run_Date__c</fullName>
    <label>Print Run Date</label>
    <type>Date</type>
</CustomField>