unpackaged/main/default/objects/Print_Run__c/fields/Publication_Issue__c.field-meta.xml
<CustomField>
    <fullName>Publication_Issue__c</fullName>
    <label>Publication Issue</label>
    <referenceTo>Publication_Issue__c</referenceTo>
    <relationshipLabel>Print Runs</relationshipLabel>
    <relationshipName>Print_Runs</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>